--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-number-format": "^5.4.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
