--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-number-format": "^5.4.0",
+    "sweetalert2": "^11.12.1",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
