--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.15",
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.11",
     "js-cookie": "^3.0.5",
     "next": "14.1.4",
     "react": "^18",
