--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/lab": "^5.0.0-alpha.170",
-    "@mui/material": "^5.15.15",
+    "@mui/material": "^5.16.0",
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.11",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
